repsite hide on mobile if no rep, header and hero fixes

--- a/src/scss/blocks/_home-hero.scss
+++ b/src/scss/blocks/_home-hero.scss
@@ -1,7 +1,7 @@
 .home-hero {
 	@apply relative;
 	.hero {
-		@apply relative overflow-hidden md:max-h-screen md:-top-140;
+		@apply relative overflow-hidden md:max-h-screen;
 
 		height: 150vw;
 		overflow: hidden;
