--- a/src/scss/templates/_header.scss
+++ b/src/scss/templates/_header.scss
@@ -1,9 +1,15 @@
 //--------------------------------------------------------------
 // Global Site Header
 //--------------------------------------------------------------
+.master-transition{
+	transition-property: background-color, border-color, color, fill, stroke;
+	transition-timing-function: ease-in-out;
+	transition-duration: 200ms;
 
+}
 .site-header {
 	@apply bg-white md:bg-transparent relative md:relative left-0 right-0 md:top-0 h-auto py-28 md:py-0 md:h-140 z-30 text-brown-dark transform-gpu transition-colors;
+	@apply master-transition;
 	.navigation-menu .menu li a {
 		line-height: 7.75;
 	}
@@ -15,10 +21,19 @@
 		@apply bg-white text-brown-dark;
 	}
 	&.bg-transparent-text-light {
-		@apply text-white  bg-transparent h-0 overflow-visible py-0;
+		@apply text-white  bg-transparent py-0 h-0;
+		> .header-container {
+			@apply master-transition;
+		}
 	}
 	&.header-hovered {
 		@apply text-brown-dark bg-white;
+		&.bg-transparent-text-light {
+			@apply text-white md:text-brown-dark;
+			> .header-container {
+				@apply bg-white;
+			}
+		}
 	}
 	&.product-menu-active {
 		@apply bg-white text-gray-medium;
@@ -41,7 +56,7 @@
 	a,
 	path,
 	ellipse {
-		@apply transition-colors;
+@apply relative;
 	}
 	> .header-container {
 		@apply relative py-16 md:py-0 px-40 md:px-40 grid grid-cols-12 items-center;
